<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_user" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="10dp"
            android:text="@string/username_dashboard"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/interior_cleaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/bar_interior_cleaning"
            app:layout_constraintEnd_toStartOf="@+id/foging"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/regular_wash"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/interior"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/detailing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bar_detailing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/detailing"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/foging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/bar_fogging"
            app:layout_constraintStart_toEndOf="@id/interior_cleaning"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/foging"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/regular_wash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/bar_regular_wash"
            app:layout_constraintStart_toEndOf="@+id/detailing"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/regular"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/frame_card"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/card_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regular_wash"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/desc_booking"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/frame_card"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/title_booking_dashboard"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/img_booking"
            app:layout_constraintStart_toStartOf="@+id/frame_card"
            app:layout_constraintTop_toBottomOf="@id/title_booking_dashboard"
            app:srcCompat="@drawable/rectangle_43"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_radius"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/bt_reservation"
            app:layout_constraintBottom_toBottomOf="@+id/frame_card"
            app:layout_constraintEnd_toEndOf="@+id/frame_card"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/frame_card"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/title_booking_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/title_booking"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/frame_card"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/frame_card"
            app:layout_constraintTop_toTopOf="@+id/frame_card" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:srcCompat="@drawable/card_persuasive" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>